<resources>
    <string name="app_name">AppDemo</string>
    <string name="action_settings">Settings</string>
    <string name="floating_action_button">CoordinatorLayout与FloatingActionButton</string>
    <string name="app_bar_layout">CoordinatorLayout与AppBarLayout</string>
    <string name="tab_layout">AppBarLayout嵌套TabLayout</string>
    <string name="collapsing_toolbar_layout">AppBarLayout嵌套CollapsingToolbarLayout</string>
    <string name="behavior">自定义behavior</string>
    <string name="card_string">first thing to do to include android design support library in our project</string>
</resources>
